--- a/settings_gui.ui
+++ b/settings_gui.ui
@@ -241,7 +241,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>600</y>
+      <y>650</y>
       <width>151</width>
       <height>131</height>
      </rect>
@@ -287,7 +287,7 @@
     <property name="geometry">
      <rect>
       <x>180</x>
-      <y>590</y>
+      <y>640</y>
       <width>111</width>
       <height>141</height>
      </rect>
@@ -342,7 +342,7 @@
       <x>20</x>
       <y>470</y>
       <width>251</width>
-      <height>101</height>
+      <height>131</height>
      </rect>
     </property>
     <property name="title">
@@ -354,24 +354,31 @@
        <x>30</x>
        <y>30</y>
        <width>192</width>
-       <height>54</height>
+       <height>83</height>
       </rect>
      </property>
      <layout class="QGridLayout" name="gridLayout_2">
-      <item row="0" column="0">
+      <item row="2" column="0">
        <widget class="QLabel" name="label_9">
         <property name="text">
          <string>Filename:</string>
         </property>
        </widget>
       </item>
-      <item row="0" column="1">
+      <item row="2" column="1">
        <widget class="QLineEdit" name="filename"/>
       </item>
-      <item row="1" column="0" colspan="2">
+      <item row="3" column="0" colspan="2">
        <widget class="QPushButton" name="button_SaveHisto">
         <property name="text">
          <string>Save Histogram</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QPushButton" name="button_AutoRange">
+        <property name="text">
+         <string>Auto Range</string>
         </property>
        </widget>
       </item>
@@ -384,12 +391,12 @@
     <rect>
      <x>20</x>
      <y>930</y>
-     <width>971</width>
+     <width>1001</width>
      <height>16</height>
     </rect>
    </property>
    <property name="text">
-    <string>Right click on plot to interact; Mouse wheel on plot area to zoom; Mouse wheel on axes to zoom in one axis.</string>
+    <string>Right click on plot to interact; Mouse wheel on plot area to zoom; Mouse wheel on axes to zoom in one axis. Tiny little &quot;A&quot; button in the bottom left to auto range.</string>
    </property>
   </widget>
  </widget>
