--- a/settings_gui.ui
+++ b/settings_gui.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1589</width>
-    <height>960</height>
+    <height>1037</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,8 +18,8 @@
     <rect>
      <x>10</x>
      <y>20</y>
-     <width>1221</width>
-     <height>901</height>
+     <width>1200</width>
+     <height>900</height>
     </rect>
    </property>
   </widget>
@@ -29,7 +29,7 @@
      <x>1250</x>
      <y>10</y>
      <width>321</width>
-     <height>931</height>
+     <height>981</height>
     </rect>
    </property>
    <property name="title">
@@ -241,9 +241,9 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>650</y>
+      <y>800</y>
       <width>151</width>
-      <height>131</height>
+      <height>161</height>
      </rect>
     </property>
     <property name="title">
@@ -252,31 +252,38 @@
     <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
-       <x>20</x>
+       <x>10</x>
        <y>30</y>
-       <width>113</width>
-       <height>83</height>
+       <width>127</width>
+       <height>112</height>
       </rect>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout">
-      <item>
+     <layout class="QGridLayout" name="gridLayout_3">
+      <item row="0" column="0">
        <widget class="QPushButton" name="button_ApplySettings">
         <property name="text">
          <string>Apply Settings</string>
         </property>
        </widget>
       </item>
-      <item>
+      <item row="1" column="0">
        <widget class="QPushButton" name="button_Defaults">
         <property name="text">
          <string>Reset to defaults</string>
         </property>
        </widget>
       </item>
-      <item>
+      <item row="2" column="0">
        <widget class="QPushButton" name="button_StartStop">
         <property name="text">
          <string>Start/Stop</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0">
+       <widget class="QLineEdit" name="status">
+        <property name="text">
+         <string/>
         </property>
        </widget>
       </item>
@@ -287,7 +294,7 @@
     <property name="geometry">
      <rect>
       <x>180</x>
-      <y>640</y>
+      <y>800</y>
       <width>111</width>
       <height>141</height>
      </rect>
@@ -341,8 +348,8 @@
      <rect>
       <x>20</x>
       <y>470</y>
-      <width>251</width>
-      <height>131</height>
+      <width>261</width>
+      <height>171</height>
      </rect>
     </property>
     <property name="title">
@@ -351,34 +358,64 @@
     <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
-       <x>30</x>
+       <x>10</x>
        <y>30</y>
-       <width>192</width>
-       <height>83</height>
+       <width>233</width>
+       <height>112</height>
       </rect>
      </property>
      <layout class="QGridLayout" name="gridLayout_2">
-      <item row="2" column="0">
+      <item row="3" column="0">
        <widget class="QLabel" name="label_9">
         <property name="text">
          <string>Filename:</string>
         </property>
        </widget>
       </item>
-      <item row="2" column="1">
+      <item row="3" column="1">
        <widget class="QLineEdit" name="filename"/>
       </item>
-      <item row="3" column="0" colspan="2">
+      <item row="4" column="0" colspan="2">
        <widget class="QPushButton" name="button_SaveHisto">
         <property name="text">
          <string>Save Histogram</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="0">
+      <item row="2" column="1">
+       <widget class="QPushButton" name="button_ClearCursors">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="text">
+         <string>Clear Cursors</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0">
        <widget class="QPushButton" name="button_AutoRange">
         <property name="text">
          <string>Auto Range</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0">
+       <widget class="QCheckBox" name="option_Cursor">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="text">
+         <string>Enable Cursor</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QCheckBox" name="option_Deltas">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="text">
+         <string>Enable Deltas</string>
         </property>
        </widget>
       </item>
@@ -386,18 +423,116 @@
     </widget>
    </widget>
   </widget>
-  <widget class="QLabel" name="label_12">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>930</y>
-     <width>1001</width>
-     <height>16</height>
+     <x>690</x>
+     <y>920</y>
+     <width>520</width>
+     <height>75</height>
     </rect>
    </property>
-   <property name="text">
-    <string>Right click on plot to interact; Mouse wheel on plot area to zoom; Mouse wheel on axes to zoom in one axis.</string>
+   <layout class="QGridLayout" name="gridLayout_4">
+    <item row="0" column="3">
+     <widget class="QLabel" name="label_15">
+      <property name="text">
+       <string>Click2</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1">
+     <widget class="QLabel" name="label_13">
+      <property name="text">
+       <string>Current</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="2">
+     <widget class="QLineEdit" name="click_1_Y"/>
+    </item>
+    <item row="0" column="4">
+     <widget class="QLabel" name="label_16">
+      <property name="text">
+       <string>Deltas</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="1">
+     <widget class="QLineEdit" name="current_X"/>
+    </item>
+    <item row="1" column="4">
+     <widget class="QLineEdit" name="delta_X"/>
+    </item>
+    <item row="2" column="1">
+     <widget class="QLineEdit" name="current_Y"/>
+    </item>
+    <item row="2" column="3">
+     <widget class="QLineEdit" name="click_2_Y"/>
+    </item>
+    <item row="2" column="4">
+     <widget class="QLineEdit" name="delta_Y"/>
+    </item>
+    <item row="1" column="2">
+     <widget class="QLineEdit" name="click_1_X"/>
+    </item>
+    <item row="1" column="3">
+     <widget class="QLineEdit" name="click_2_X"/>
+    </item>
+    <item row="0" column="2">
+     <widget class="QLabel" name="label_14">
+      <property name="text">
+       <string>Click1</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="0">
+     <widget class="QLabel" name="label_19">
+      <property name="text">
+       <string>X:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="0">
+     <widget class="QLabel" name="label_20">
+      <property name="text">
+       <string>Y:</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="layoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>930</y>
+     <width>395</width>
+     <height>59</height>
+    </rect>
    </property>
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
+     <widget class="QLabel" name="label_12">
+      <property name="text">
+       <string>Right click on plot to interact; Mouse wheel on plot area to zoom;</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="label_17">
+      <property name="text">
+       <string>Mouse wheel on axes to zoom just that axis</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="label_18">
+      <property name="text">
+       <string>Left click to place measurement cursors</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
   </widget>
  </widget>
  <customwidgets>
