--- a/settings_gui.ui
+++ b/settings_gui.ui
@@ -361,7 +361,7 @@
        <x>10</x>
        <y>30</y>
        <width>233</width>
-       <height>112</height>
+       <height>139</height>
       </rect>
      </property>
      <layout class="QGridLayout" name="gridLayout_2">
@@ -379,23 +379,6 @@
        <widget class="QPushButton" name="button_SaveHisto">
         <property name="text">
          <string>Save Histogram</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="1">
-       <widget class="QPushButton" name="button_ClearDeltas">
-        <property name="enabled">
-         <bool>true</bool>
-        </property>
-        <property name="text">
-         <string>Clear Deltas</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0">
-       <widget class="QPushButton" name="button_AutoRange">
-        <property name="text">
-         <string>Auto Range</string>
         </property>
        </widget>
       </item>
@@ -419,6 +402,30 @@
         </property>
        </widget>
       </item>
+      <item row="1" column="1">
+       <widget class="QPushButton" name="button_ClearDeltas">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+        <property name="text">
+         <string>Clear Deltas</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QPushButton" name="button_ClearHistogram">
+        <property name="text">
+         <string>Clear Histogram</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QPushButton" name="button_AutoRange">
+        <property name="text">
+         <string>Auto Range</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </widget>
@@ -436,14 +443,14 @@
     <item row="0" column="3">
      <widget class="QLabel" name="label_15">
       <property name="text">
-       <string>Click2</string>
+       <string>Click2 (green)</string>
       </property>
      </widget>
     </item>
     <item row="0" column="1">
      <widget class="QLabel" name="label_13">
       <property name="text">
-       <string>Current</string>
+       <string>Current (yellow)</string>
       </property>
      </widget>
     </item>
@@ -453,7 +460,7 @@
     <item row="0" column="4">
      <widget class="QLabel" name="label_16">
       <property name="text">
-       <string>Deltas</string>
+       <string>Click1 - Click2</string>
       </property>
      </widget>
     </item>
@@ -481,7 +488,7 @@
     <item row="0" column="2">
      <widget class="QLabel" name="label_14">
       <property name="text">
-       <string>Click1</string>
+       <string>Click1 (red)</string>
       </property>
      </widget>
     </item>
