--- a/settings_gui.ui
+++ b/settings_gui.ui
@@ -66,6 +66,12 @@
       </item>
       <item row="0" column="1">
        <widget class="QDoubleSpinBox" name="CFD0_Zerocross">
+        <property name="decimals">
+         <number>0</number>
+        </property>
+        <property name="maximum">
+         <double>20.000000000000000</double>
+        </property>
         <property name="value">
          <double>10.000000000000000</double>
         </property>
@@ -80,6 +86,12 @@
       </item>
       <item row="1" column="1">
        <widget class="QDoubleSpinBox" name="CFD0_Level">
+        <property name="decimals">
+         <number>0</number>
+        </property>
+        <property name="maximum">
+         <double>800.000000000000000</double>
+        </property>
         <property name="value">
          <double>50.000000000000000</double>
         </property>
@@ -146,7 +158,7 @@
       <rect>
        <x>10</x>
        <y>30</y>
-       <width>189</width>
+       <width>197</width>
        <height>56</height>
       </rect>
      </property>
@@ -160,6 +172,12 @@
       </item>
       <item row="0" column="1">
        <widget class="QDoubleSpinBox" name="CFD1_Zerocross">
+        <property name="decimals">
+         <number>0</number>
+        </property>
+        <property name="maximum">
+         <double>20.000000000000000</double>
+        </property>
         <property name="value">
          <double>10.000000000000000</double>
         </property>
@@ -174,6 +192,12 @@
       </item>
       <item row="1" column="1">
        <widget class="QDoubleSpinBox" name="CFD1_Level">
+        <property name="decimals">
+         <number>0</number>
+        </property>
+        <property name="maximum">
+         <double>800.000000000000000</double>
+        </property>
         <property name="value">
          <double>50.000000000000000</double>
         </property>
@@ -224,7 +248,7 @@
          <number>0</number>
         </property>
         <property name="maximum">
-         <double>100000.000000000000000</double>
+         <double>36000000.000000000000000</double>
         </property>
         <property name="value">
          <double>1000.000000000000000</double>
