--- a/settings_gui.ui
+++ b/settings_gui.ui
@@ -1133,71 +1133,97 @@
          <widget class="QWidget" name="layoutWidget">
           <property name="geometry">
            <rect>
-            <x>30</x>
-            <y>30</y>
+            <x>20</x>
+            <y>20</y>
             <width>511</width>
-            <height>99</height>
+            <height>116</height>
            </rect>
           </property>
           <layout class="QGridLayout" name="gridLayout_13">
-           <item row="1" column="1">
-            <widget class="QLabel" name="label_3">
-             <property name="text">
-              <string>Green</string>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="0">
-            <widget class="QLineEdit" name="integral_Red"/>
-           </item>
-           <item row="2" column="1">
-            <widget class="QLineEdit" name="integral_Green"/>
-           </item>
-           <item row="1" column="2">
+           <item row="1" column="3">
             <widget class="QLabel" name="label_4">
              <property name="text">
               <string>Blue</string>
              </property>
             </widget>
            </item>
-           <item row="1" column="0">
-            <widget class="QLabel" name="label">
-             <property name="text">
-              <string>Red</string>
-             </property>
-            </widget>
+           <item row="2" column="4">
+            <widget class="QLineEdit" name="integral_Magenta"/>
            </item>
            <item row="2" column="3">
-            <widget class="QLineEdit" name="integral_White"/>
-           </item>
-           <item row="2" column="2">
             <widget class="QLineEdit" name="integral_Blue"/>
            </item>
-           <item row="1" column="3">
-            <widget class="QLabel" name="label_5">
-             <property name="text">
-              <string>White</string>
-             </property>
-            </widget>
-           </item>
-           <item row="3" column="3">
+           <item row="4" column="4">
             <widget class="QPushButton" name="button_ClearIntegrals">
              <property name="text">
               <string>Clear Markers</string>
              </property>
             </widget>
            </item>
-           <item row="0" column="0">
+           <item row="3" column="4">
+            <widget class="QLineEdit" name="max_Magenta"/>
+           </item>
+           <item row="1" column="4">
+            <widget class="QLabel" name="label_5">
+             <property name="text">
+              <string>Magenta</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="1">
+            <widget class="QLabel" name="label">
+             <property name="text">
+              <string>Red</string>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="2">
+            <widget class="QLineEdit" name="integral_Green"/>
+           </item>
+           <item row="0" column="2">
+            <widget class="QLineEdit" name="integral_Width">
+             <property name="text">
+              <string>5e-9</string>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="2">
+            <widget class="QLineEdit" name="max_Green"/>
+           </item>
+           <item row="3" column="3">
+            <widget class="QLineEdit" name="max_Blue"/>
+           </item>
+           <item row="1" column="2">
+            <widget class="QLabel" name="label_3">
+             <property name="text">
+              <string>Green</string>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="1">
+            <widget class="QLineEdit" name="integral_Red"/>
+           </item>
+           <item row="3" column="1">
+            <widget class="QLineEdit" name="max_Red"/>
+           </item>
+           <item row="0" column="1">
             <widget class="QLabel" name="label_6">
              <property name="text">
               <string>Integral Width</string>
              </property>
             </widget>
            </item>
-           <item row="0" column="1">
-            <widget class="QLineEdit" name="integral_Width">
+           <item row="2" column="0">
+            <widget class="QLabel" name="label_7">
              <property name="text">
-              <string>5e-9</string>
+              <string>Mean:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="0">
+            <widget class="QLabel" name="label_8">
+             <property name="text">
+              <string>Max</string>
              </property>
             </widget>
            </item>
