--- a/settings_gui.ui
+++ b/settings_gui.ui
@@ -1133,83 +1133,27 @@
          <widget class="QWidget" name="layoutWidget">
           <property name="geometry">
            <rect>
-            <x>20</x>
-            <y>20</y>
+            <x>30</x>
+            <y>10</y>
             <width>511</width>
-            <height>116</height>
+            <height>128</height>
            </rect>
           </property>
           <layout class="QGridLayout" name="gridLayout_13">
-           <item row="1" column="3">
-            <widget class="QLabel" name="label_4">
-             <property name="text">
-              <string>Blue</string>
-             </property>
-            </widget>
+           <item row="3" column="2">
+            <widget class="QLineEdit" name="max_Green"/>
            </item>
-           <item row="2" column="4">
-            <widget class="QLineEdit" name="integral_Magenta"/>
-           </item>
-           <item row="2" column="3">
-            <widget class="QLineEdit" name="integral_Blue"/>
-           </item>
-           <item row="4" column="4">
+           <item row="0" column="4">
             <widget class="QPushButton" name="button_ClearIntegrals">
              <property name="text">
               <string>Clear Markers</string>
              </property>
             </widget>
            </item>
-           <item row="3" column="4">
-            <widget class="QLineEdit" name="max_Magenta"/>
-           </item>
-           <item row="1" column="4">
-            <widget class="QLabel" name="label_5">
-             <property name="text">
-              <string>Magenta</string>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="1">
-            <widget class="QLabel" name="label">
-             <property name="text">
-              <string>Red</string>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="2">
-            <widget class="QLineEdit" name="integral_Green"/>
-           </item>
-           <item row="0" column="2">
-            <widget class="QLineEdit" name="integral_Width">
-             <property name="text">
-              <string>5e-9</string>
-             </property>
-            </widget>
-           </item>
-           <item row="3" column="2">
-            <widget class="QLineEdit" name="max_Green"/>
-           </item>
-           <item row="3" column="3">
-            <widget class="QLineEdit" name="max_Blue"/>
-           </item>
-           <item row="1" column="2">
-            <widget class="QLabel" name="label_3">
-             <property name="text">
-              <string>Green</string>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="1">
-            <widget class="QLineEdit" name="integral_Red"/>
-           </item>
-           <item row="3" column="1">
-            <widget class="QLineEdit" name="max_Red"/>
-           </item>
            <item row="0" column="1">
             <widget class="QLabel" name="label_6">
              <property name="text">
-              <string>Integral Width</string>
+              <string>Integral Width:</string>
              </property>
             </widget>
            </item>
@@ -1220,10 +1164,111 @@
              </property>
             </widget>
            </item>
+           <item row="4" column="0">
+            <widget class="QLabel" name="label_9">
+             <property name="text">
+              <string>Normalize:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="1">
+            <widget class="QLineEdit" name="max_Red"/>
+           </item>
+           <item row="3" column="4">
+            <widget class="QLineEdit" name="max_Magenta"/>
+           </item>
+           <item row="4" column="2" alignment="Qt::AlignHCenter">
+            <widget class="QRadioButton" name="normalize_Green">
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
+           </item>
            <item row="3" column="0">
             <widget class="QLabel" name="label_8">
              <property name="text">
               <string>Max</string>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="3">
+            <widget class="QLineEdit" name="max_Blue"/>
+           </item>
+           <item row="1" column="4">
+            <widget class="QLabel" name="label_5">
+             <property name="text">
+              <string>Magenta</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="2">
+            <widget class="QLineEdit" name="integral_Width">
+             <property name="text">
+              <string>5e-9</string>
+             </property>
+            </widget>
+           </item>
+           <item row="4" column="1" alignment="Qt::AlignHCenter">
+            <widget class="QRadioButton" name="normalize_Red">
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="2">
+            <widget class="QLabel" name="label_3">
+             <property name="text">
+              <string>Green</string>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="4">
+            <widget class="QLineEdit" name="integral_Magenta"/>
+           </item>
+           <item row="2" column="3">
+            <widget class="QLineEdit" name="integral_Blue"/>
+           </item>
+           <item row="1" column="3">
+            <widget class="QLabel" name="label_4">
+             <property name="text">
+              <string>Blue</string>
+             </property>
+            </widget>
+           </item>
+           <item row="4" column="4" alignment="Qt::AlignHCenter">
+            <widget class="QRadioButton" name="normalize_Magenta">
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="1">
+            <widget class="QLabel" name="label">
+             <property name="text">
+              <string>Red</string>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="1">
+            <widget class="QLineEdit" name="integral_Red"/>
+           </item>
+           <item row="2" column="2">
+            <widget class="QLineEdit" name="integral_Green"/>
+           </item>
+           <item row="4" column="3" alignment="Qt::AlignHCenter">
+            <widget class="QRadioButton" name="normalize_Blue">
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
+           </item>
+           <item row="4" column="5" alignment="Qt::AlignHCenter">
+            <widget class="QRadioButton" name="normalize_Off">
+             <property name="text">
+              <string>Off</string>
+             </property>
+             <property name="checked">
+              <bool>true</bool>
              </property>
             </widget>
            </item>
