--- a/settings_gui.ui
+++ b/settings_gui.ui
@@ -87,13 +87,13 @@
            </property>
            <property name="minimumSize">
             <size>
-             <width>700</width>
+             <width>800</width>
              <height>180</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
-             <width>600</width>
+             <width>800</width>
              <height>180</height>
             </size>
            </property>
@@ -966,48 +966,6 @@
             <layout class="QGridLayout" name="gridLayout_12">
              <item row="0" column="0">
               <layout class="QGridLayout" name="gridLayout_9">
-               <item row="0" column="0">
-                <widget class="QLabel" name="label_13">
-                 <property name="font">
-                  <font>
-                   <pointsize>20</pointsize>
-                  </font>
-                 </property>
-                 <property name="text">
-                  <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#ff0000;&quot;&gt;Ch 0 (sync)&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="0" column="1">
-                <widget class="QLineEdit" name="counts_Ch0_Big">
-                 <property name="minimumSize">
-                  <size>
-                   <width>300</width>
-                   <height>0</height>
-                  </size>
-                 </property>
-                 <property name="maximumSize">
-                  <size>
-                   <width>300</width>
-                   <height>16777215</height>
-                  </size>
-                 </property>
-                 <property name="font">
-                  <font>
-                   <pointsize>20</pointsize>
-                  </font>
-                 </property>
-                 <property name="frame">
-                  <bool>true</bool>
-                 </property>
-                 <property name="cursorPosition">
-                  <number>0</number>
-                 </property>
-                 <property name="alignment">
-                  <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-                 </property>
-                </widget>
-               </item>
                <item row="1" column="0">
                 <widget class="QLabel" name="label_14">
                  <property name="font">
@@ -1041,6 +999,65 @@
                  </property>
                  <property name="alignment">
                   <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                 </property>
+                </widget>
+               </item>
+               <item row="0" column="1">
+                <widget class="QLineEdit" name="counts_Ch0_Big">
+                 <property name="minimumSize">
+                  <size>
+                   <width>240</width>
+                   <height>0</height>
+                  </size>
+                 </property>
+                 <property name="maximumSize">
+                  <size>
+                   <width>300</width>
+                   <height>16777215</height>
+                  </size>
+                 </property>
+                 <property name="font">
+                  <font>
+                   <pointsize>20</pointsize>
+                  </font>
+                 </property>
+                 <property name="frame">
+                  <bool>true</bool>
+                 </property>
+                 <property name="cursorPosition">
+                  <number>0</number>
+                 </property>
+                 <property name="alignment">
+                  <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                 </property>
+                </widget>
+               </item>
+               <item row="0" column="0">
+                <widget class="QLabel" name="label_13">
+                 <property name="font">
+                  <font>
+                   <pointsize>20</pointsize>
+                  </font>
+                 </property>
+                 <property name="text">
+                  <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#ff0000;&quot;&gt;Ch 0 (sync)&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="0" column="2">
+                <widget class="QCheckBox" name="option_Ch0_Counts">
+                 <property name="text">
+                  <string>Plot</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="1" column="2">
+                <widget class="QCheckBox" name="option_Ch1_Counts">
+                 <property name="text">
+                  <string>Plot</string>
+                 </property>
+                 <property name="checked">
+                  <bool>true</bool>
                  </property>
                 </widget>
                </item>
@@ -1618,13 +1635,13 @@
            <property name="minimumSize">
             <size>
              <width>260</width>
-             <height>120</height>
+             <height>150</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
              <width>260</width>
-             <height>120</height>
+             <height>150</height>
             </size>
            </property>
            <property name="font">
@@ -1638,14 +1655,20 @@
            <layout class="QGridLayout" name="gridLayout">
             <item row="0" column="0">
              <layout class="QGridLayout" name="gridLayout_5">
-              <item row="1" column="0">
-               <widget class="QLabel" name="filename_Label">
+              <item row="3" column="1">
+               <widget class="QPushButton" name="button_SaveHisto">
+                <property name="maximumSize">
+                 <size>
+                  <width>16777215</width>
+                  <height>25</height>
+                 </size>
+                </property>
                 <property name="text">
-                 <string>Save filename:</string>
+                 <string>Save Histogram</string>
                 </property>
                </widget>
               </item>
-              <item row="1" column="1">
+              <item row="2" column="1">
                <widget class="QLineEdit" name="data_Filename">
                 <property name="text">
                  <string>histogram.csv</string>
@@ -1653,6 +1676,13 @@
                </widget>
               </item>
               <item row="2" column="0">
+               <widget class="QLabel" name="filename_Label">
+                <property name="text">
+                 <string>Save filename:</string>
+                </property>
+               </widget>
+              </item>
+              <item row="3" column="0">
                <widget class="QPushButton" name="button_ClearHistogram">
                 <property name="maximumSize">
                  <size>
@@ -1662,6 +1692,13 @@
                 </property>
                 <property name="text">
                  <string>Clear Histogram</string>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="0">
+               <widget class="QCheckBox" name="option_Cumulative">
+                <property name="text">
+                 <string>Cumulative</string>
                 </property>
                </widget>
               </item>
@@ -1678,23 +1715,10 @@
                 </property>
                </widget>
               </item>
-              <item row="0" column="0">
-               <widget class="QCheckBox" name="option_Cumulative">
+              <item row="1" column="0">
+               <widget class="QCheckBox" name="option_LogY">
                 <property name="text">
-                 <string>Cumulative</string>
-                </property>
-               </widget>
-              </item>
-              <item row="2" column="1">
-               <widget class="QPushButton" name="button_SaveHisto">
-                <property name="maximumSize">
-                 <size>
-                  <width>16777215</width>
-                  <height>25</height>
-                 </size>
-                </property>
-                <property name="text">
-                 <string>Save Histogram</string>
+                 <string>Log Y</string>
                 </property>
                </widget>
               </item>
@@ -1824,19 +1848,6 @@
        </widget>
       </item>
       <item>
-       <spacer name="verticalSpacer">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item>
        <widget class="QFrame" name="frame_2">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -1899,8 +1910,8 @@
            <layout class="QGridLayout" name="gridLayout_11">
             <item row="0" column="0">
              <layout class="QGridLayout" name="gridLayout_10">
-              <item row="1" column="0">
-               <widget class="QPushButton" name="button_StartStop">
+              <item row="0" column="0">
+               <widget class="QPushButton" name="button_ApplySettings">
                 <property name="sizePolicy">
                  <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                   <horstretch>0</horstretch>
@@ -1920,7 +1931,7 @@
                  </size>
                 </property>
                 <property name="text">
-                 <string>Start/Stop</string>
+                 <string>Apply Settings</string>
                 </property>
                </widget>
               </item>
@@ -1946,8 +1957,8 @@
                 </property>
                </widget>
               </item>
-              <item row="0" column="0">
-               <widget class="QPushButton" name="button_ApplySettings">
+              <item row="1" column="0">
+               <widget class="QPushButton" name="button_StartStop">
                 <property name="sizePolicy">
                  <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                   <horstretch>0</horstretch>
@@ -1967,7 +1978,7 @@
                  </size>
                 </property>
                 <property name="text">
-                 <string>Apply Settings</string>
+                 <string>Start/Stop</string>
                 </property>
                </widget>
               </item>
