Fixed bug (new version of PyQt5 puts QMessagebox somewhere else? This didn't used to fail...) Fixed GUI issue on certain resolutions where the boxes weren't scaling right Added some MD files to document contributing (CONTRIBUTING.MD) and started a (very simple) framework for crediting anyone who contributes (CREDITS.MD)

--- a/settings_gui.ui
+++ b/settings_gui.ui
@@ -2040,6 +2040,24 @@
       </item>
       <item>
        <widget class="QTabWidget" name="control_Warning_Tabber">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>280</width>
+          <height>170</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>280</width>
+          <height>170</height>
+         </size>
+        </property>
         <property name="currentIndex">
          <number>0</number>
         </property>
